--- a/afripro-dashboard/src/index.css
+++ b/afripro-dashboard/src/index.css
@@ -17,6 +17,8 @@
 
 body{
     font-family: "Avnir";
-    background-color: #171717;
+    background-color: #232323;
     color:white;
+    padding:0px;
+    margin:0px;
 }
