--- a/afripro-dashboard/src/modules/authentication_module/styles/index.css
+++ b/afripro-dashboard/src/modules/authentication_module/styles/index.css
@@ -1,8 +1,10 @@
 .form{
     width: 100%;
-    max-width: 400px;
+    max-width: 450px;
     margin:auto;
-    margin-top:200px;
+    margin-top:100px;
+    padding: 20px;
+    box-sizing: border-box;
 }
 
 .form h3{
